fix:validations amount added
